- "update PCA transformer to the SER system" - "there are some problems with recognize the single audio with pca preprocessing,the idea is to save the pca transformer when it was first fited,and then try to load corresponding file(joblib or pickle) when you need to recognize several audios that need extract the required dimension feature"

--- a/SG/translations/en.json
+++ b/SG/translations/en.json
@@ -2,6 +2,7 @@
     "welcome_message": "Welcome to My App!",
     "choose_emotion_config": "Please select an emotional combination for testing: recommended combinations are AS, HNS, AHNS, AHNPS. \nNote that there is a difference between 'surprise' and 'pleasantSurprise' in the SAVEE dataset, \nso the AHNPS combination is not recommended for use on SAVEE.",
     "choose_feature_config": "Please choose one or more features",
+    "feature_transfomr_config":"feature transfomer config",
     "choose_algorithm": "Choose an algorithm for testing",
     "choose_audio": "Please select an audio sample file to recognize its emotion.",
     "recognize_the_audio_emotion": "Recognize the emotion of the selected audio file.",
