--- a/test_playground/demo_py_skills.ipynb
+++ b/test_playground/demo_py_skills.ipynb
@@ -59,62 +59,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[], [], []]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"A\"= [1, 2, 3], \"B\"= [4, 5, 6], \"C\"= [7, 8, 9]}\n"
+     ]
     }
    ],
-   "source": [
-    "[[] for _ in range(3)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=\"abc\"\n",
-    "a+=\"_\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'abc_'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "d = {'A': [1, 2, 3], 'B': [4, 5, 6], 'C': [7, 8, 9]}\n",
-    "df = pd.DataFrame(d)"
+    "import json\n",
+    "\n",
+    "def dict_to_filename(d):\n",
+    "    # Convert dictionary to JSON string\n",
+    "    json_str = json.dumps(d)\n",
+    "\n",
+    "    # Replace invalid characters with hyphen\n",
+    "    invalid_chars = ':'\n",
+    "    rep_dict={\n",
+    "        \":\":\"=\",\n",
+    "        '\"':'',\n",
+    "        # \"'\":\"\"\n",
+    "    }\n",
+    "    for char in json_str:\n",
+    "        if rep_dict.get(char):\n",
+    "            json_str = json_str.replace(char, rep_dict[char])\n",
+    "\n",
+    "\n",
+    "    # Truncate string if too long\n",
+    "    # max_len = 260\n",
+    "    # if len(json_str) > max_len:\n",
+    "    #     json_str = json_str[:max_len]\n",
+    "\n",
+    "    return json_str\n",
+    "res=dict_to_filename(d)\n",
+    "print(res)\n"
    ]
   },
   {
